<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Number Guesser</string>
    <string name="welcome"><b>Hello, friend!</b>\nI\'m thinking of a number between 1 and #.\nCan you guess the number in $ attempts?\n</string>
    <string name="action_settings">Settings</string>
    <string name="guess">Guess</string>
    <string name="ask">Insert a number</string>

    <string name="more">Is greater than</string>
    <string name="less">Is less than</string>
    <string name="on_fire">So close!</string>

    <string name="win">You win!</string>
    <string name="lose">You lose, the number was: </string>

    <string name="new_game">New Game</string>

    <string name="error">Try a valid number</string>

    <string name="end_game">Game End</string>
    <string name="play_again">Play Again?</string>

    <string name="play">Play</string>
    <string name="exit">Exit</string>
    <string name="ok">OK</string>

    <string name="tries_text">Tries: </string>

    <string name="in_range">"Outside range: Insert a number between 1 and "</string>

    <string name="fab_menu">Menu</string>
    <string name="character1">Genie (New)</string>
    <string name="character2">Genie (Old)</string>
    <string name="change_msg">Changed</string>
    <string name="level">Level:</string>
    <string name="character3">Businessman</string>
    <string name="points">Points:</string>
    <string name="level_up">"You are Level "</string>
    <string name="rewards_level">Check your new skin</string>

</resources>
