<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".Guesser">

    <TextView
        android:id="@+id/info_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:lines="4" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:text="@string/ask" />

        <EditText
            android:id="@+id/number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number"
            android:maxLength="4" />

    </LinearLayout>

    <Button
        android:id="@+id/guess_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/guess" />

    <TextView
        android:id="@+id/tries_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:textColor="#00C000"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/last_try_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:textColor="#00C000"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/clue_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:textColor="#00C000"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/message_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/label_vertical_margin"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/level_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="casual"
            android:text=""
            android:textColor="#00C000"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/points_level"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:fontFamily="casual"
            android:gravity="right"
            android:text=""
            android:textColor="#00C000"
            android:textSize="30sp" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:contentDescription="android" />

        <com.github.clans.fab.FloatingActionMenu
            android:id="@+id/fab_menu"
            android:layout_width="match_parent"
            android:layout_height="73dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingBottom="10dp"

            fab:menu_backgroundColor="#44ffffff"
            fab:menu_colorNormal="#2196F3"
            fab:menu_colorPressed="#00BCD4"
            fab:menu_colorRipple="#00D4AA"

            fab:menu_fab_label="@string/fab_menu"
            fab:menu_icon="@drawable/ic_tool_white"
            fab:menu_labels_ellipsize="end"
            fab:menu_labels_singleLine="true"

            >

            <com.github.clans.fab.FloatingActionButton
                android:id="@+id/fab1"
                style="@style/MenuButtons"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_genio"
                fab:fab_label="@string/character1" />

            <com.github.clans.fab.FloatingActionButton
                android:id="@+id/fab2"
                style="@style/MenuButtons"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_genio_old"
                fab:fab_label="@string/character2" />

            <com.github.clans.fab.FloatingActionButton
                android:id="@+id/fab3"
                style="@style/MenuButtons"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_businessman"
                android:visibility="gone"
                fab:fab_label="@string/character3" />
            <!--
            <com.github.clans.fab.FloatingActionButton
                android:id="@+id/fab3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_tool"
                fab:fab_label="Restore Button"
                style="@style/MenuButtons"
                />
            -->

        </com.github.clans.fab.FloatingActionMenu>


    </RelativeLayout>


</LinearLayout>
